docs-updated index.html
updated by added my interests

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HI ... this is chethana...welcome to my portfolio</title>
+    <title>welcome to my portfolio</title>
 </head>
 <body>
-    
+    HI ... this is chethana...
+    I Want to learn web developing because its very interesting ...
+    so i would like to explore more.
 </body>
 </html>
