--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     HI ... this is chethana...
     I Want to learn web developing because its very interesting ...
     so i would like to explore more.
+    i m looking up to tanay pratap currently...
 </body>
 </html>
